syntax = "proto3";

package billetera;

service BilleteraService {
  rpc ObtenerSaldo (SaldoRequest) returns (SaldoResponse);
  rpc RealizarTransaccion (TransaccionRequest) returns (TransaccionResponse);
  rpc Login (AuthRequest) returns (AuthResponse);
}

message SaldoRequest {
  int32 account_id = 1;
}

message SaldoResponse {
  double saldo = 1;
}

message TransaccionRequest {
  int32 sender_account_id = 1;
  int32 receiver_account_id = 2;
  double amount = 3;
}

message TransaccionResponse {
  string status = 1;
}

service AuthService {
  rpc Login (AuthRequest) returns (AuthResponse);
}

message AuthRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
}